ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path-based
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
    appgw.ingress.kubernetes.io/health-probe-path-backend-svc: "/api/employees"
    appgw.ingress.kubernetes.io/probe-hostname: "employee.com"
spec:
  rules:
    - host: employee.com
      http:
        paths:
          - path: /api/employees
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
